src/test/ui/lifetimes/issue-34979.stderr
error[E0283]: type annotations needed: cannot satisfy `&'a (): Foo`
  --> $DIR/issue-34979.rs:6:13
   |
LL |     &'a (): Foo,
   |             ^^^
   |
   = note: cannot satisfy `&'a (): Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
